# TickPlant

./: .gitignore  CMakeLists.txt  README.md  _vcpkg.json  build.sh  docker-compose.yml  prometheus.yml  reports.json  run_benchmarks.sh
benchmark_results/: benchmark_comparison_linux.md  report_20260319_230835.txt
benchmark_results/20260319_230835_json/: bench_mpsc_queue.json  bench_mutex_queue.json  bench_spsc_queue.json  bench_timing_overhead.json
benchmark_results/linux_0326/: bench_fix_parser.json  bench_mpsc_queue.json  bench_mutex_queue.json  bench_spsc_queue.json  bench_timing_overhead.json
benchmark_results/linux_isolcpus02_0326/: bench_fix_parser.json  bench_mpsc_queue.json  bench_mutex_queue.json  bench_spsc_queue.json  bench_timing_overhead.json
benchmarks/: bench_fix_parser.cpp  bench_mpsc_queue.cpp  bench_mutex_queue.cpp  bench_query_client.cpp  bench_spsc_queue.cpp  bench_timing_overhead.cpp
docs/: uml_class_diagram.md  uml_data_flow.md
grafana/dashboards/: tickplant.json
grafana/provisioning/datasources/: prometheus.yml
report/: burst_analysis.md  staleness_analysis.md
src/: arbitrage_engine.cpp  arbitrage_engine.hpp  binance_client.cpp  binance_client.hpp  bybit_client.cpp  bybit_client.hpp  coinbase_client.cpp  coinbase_client.hpp  data_source.hpp  data_source_registry.cpp  data_source_registry.hpp  env_loader.hpp  exchange_data_source.cpp  exchange_data_source.hpp  exchange_queue.hpp  fix_feed_simulator.cpp  fix_feed_simulator.hpp  fix_parser.cpp  fix_parser.hpp  kraken_client.cpp  kraken_client.hpp  latency_monitor.hpp  main.cpp  metrics.cpp  metrics.hpp  order_book.cpp  order_book.hpp  query_server.cpp  query_server.hpp  query_server_epoll.cpp  query_server_epoll.hpp  query_server_uring.cpp  query_server_uring.hpp  questdb_data_source.cpp  questdb_data_source.hpp  remote_data_source.cpp  remote_data_source.hpp  report_pipeline.cpp  report_pipeline.hpp  report_types.hpp  (+6 more)
tests/replay/: itch_replay.cpp  itch_replay.hpp  order_book_test.cpp
